[gd_scene load_steps=15 format=3 uid="uid://dg2kdipui341n"]

[ext_resource type="Script" path="res://Slideshow.gd" id="1_4qess"]
[ext_resource type="Texture2D" uid="uid://j4e35spfupeq" path="res://Assets/UI Graphics/Cover.png" id="2_bow1l"]
[ext_resource type="Texture2D" uid="uid://dglqrx68ip3my" path="res://Assets/UI Graphics/tutslide1.png" id="2_rd7dj"]
[ext_resource type="Texture2D" uid="uid://b1icsnp6tisxh" path="res://Assets/UI Graphics/SlideFrame.png" id="3_2pg06"]
[ext_resource type="Texture2D" uid="uid://bkulrvqehcmkk" path="res://Assets/UI Graphics/tutslide2.png" id="3_moqvr"]
[ext_resource type="Texture2D" uid="uid://brshx1b6ee437" path="res://Assets/UI Graphics/tutslide3.png" id="4_jvkrr"]
[ext_resource type="Texture2D" uid="uid://c8ht8pum54mfn" path="res://Assets/UI Graphics/tutslide4.png" id="5_526te"]
[ext_resource type="Texture2D" uid="uid://b6fuh5ilybco5" path="res://Assets/UI Graphics/tutslide5.png" id="6_lpxx7"]
[ext_resource type="Texture2D" uid="uid://c4n0t6w4hujgl" path="res://Assets/UI Graphics/tutslide6.png" id="7_46fa2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vpql"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aj7pv"]
bg_color = Color(0.596078, 0.411765, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ysvac"]
bg_color = Color(0.921569, 0.458824, 0.0313726, 1)
skew = Vector2(0.6, 0)
border_width_left = 6
border_width_top = 4
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4nugx"]
bg_color = Color(0.921569, 0.458824, 0.0313726, 1)
skew = Vector2(0.6, 0)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qep77"]
bg_color = Color(0.921569, 0.458824, 0.0313726, 1)
skew = Vector2(0.6, 0)
border_width_left = 6
border_width_top = 4
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 8

[node name="Slideshow" type="Control" node_paths=PackedStringArray("slidePanel")]
z_index = 3000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4qess")
slides = Array[Texture2D]([ExtResource("2_rd7dj"), ExtResource("3_moqvr"), ExtResource("4_jvkrr"), ExtResource("5_526te"), ExtResource("6_lpxx7"), ExtResource("7_46fa2"), ExtResource("2_bow1l")])
slidePanel = NodePath("SlideshowPanel")
toStartMenu = true

[node name="Panel" type="Panel" parent="."]
z_index = 3000
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 564.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1vpql")

[node name="Panel2" type="Panel" parent="Panel"]
z_index = 3000
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 55.0
offset_right = 140.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aj7pv")

[node name="Panel2" type="Panel" parent="."]
z_index = 3000
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -578.0
offset_right = 3.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1vpql")

[node name="Panel2" type="Panel" parent="Panel2"]
z_index = 3000
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_right = -45.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aj7pv")

[node name="SlideshowPanel" type="TextureRect" parent="."]
z_index = 3000
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -324.0
offset_right = 324.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
texture = ExtResource("2_bow1l")
expand_mode = 3

[node name="FrameWindow" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.372549)
z_index = 3000
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -324.0
offset_right = 324.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
texture = ExtResource("3_2pg06")
expand_mode = 3

[node name="StartButton" type="Button" parent="."]
visible = false
z_index = 3000
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -301.0
offset_top = -98.0
offset_right = 30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_ysvac")
theme_override_styles/hover = SubResource("StyleBoxFlat_4nugx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qep77")
text = "Bee-gin!"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
